kubernetes/components/hajimari/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari
  namespace: hajimari
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      url: "http://hajimari.hajimari.svc.cluster.local:3000"
      interval: 60s
      conditions:
        - "[STATUS] == 200"
    homarr.dev/enabled: "true"
    homarr.dev/category: "Dashboards"
    homarr.dev/name: "Hajimari"
    homarr.dev/url: "https://hajimari.${LOCAL_DOMAIN}"
    homarr.dev/icon: "startpage"
    homarr.dev/description: "static app list"
    homarr.dev/ping-url: "http://hajimari.hajimari.svc.cluster.local:3000"
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  hostnames:
  - "hajimari.${LOCAL_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hajimari
      port: 3000
